k8s/production/liveservice-deployements.yaml

#liveservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live-service
  namespace: streamio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live-service
  template:
    metadata:
      labels:
        app: live-service
    spec:
      containers:
      - name: live-service
        image: nspious/streamio-live-service:latest
        ports:
          - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: live-service
  namespace: streamio
spec:
  type: LoadBalancer
  ports:
  - port: 5005
    targetPort: 5005
  selector:
    app: live-service
---
