k8s/production/userservice-deployement.yaml
#userservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: streamio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: nspious/streamio-user-service:latest
        ports:
          - containerPort: 5001
          - containerPort: 50054
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: streamio
spec:
  ports:
  - name: http
    port: 5001
    targetPort: 5001
  - name: grpc
    port: 50054
    targetPort: 50054
  selector:
    app: user-service
  type: ClusterIP
---
