k8s/production/videoservice-deployements.yaml


#videoservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-service
  namespace: streamio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-service
  template:
    metadata:
      labels:
        app: video-service
    spec:
      containers:
      - name: video-service
        image: nspious/streamio-video-service:latest
        ports:
          - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: video-service
  namespace: streamio
spec:
  ports:
  - port: 5002
    targetPort: 5002
  selector:
    app: video-service
  type: ClusterIP
---
