k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamio-ingress
  namespace: streamio
spec:
  ingressClassName: nginx
  rules:
  - host: streamiobackend.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 5000
      - path: /live
        pathType: Prefix
        backend:
          service:
            name: live-service
            port:
              number: 5005
